welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:10: error: ';' expected but 'else' found.
    else  for(compteurbis <-1 to nbPas) {
    ^